# kokkos-n-body

./: CMakeLists.txt  HelloKokkos.cpp  README.md  SimpleMB.cpp
